syntax = "proto3";

import "stock_day_avg.proto";
import "stock_price_real_time.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
package pb;

option go_package = "github.com/RoyceAzure/go-stockinfo/shared/pb";
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
    info: {
      title: "stcok Info scheduler API";
      version: "1.0";
      contact: {
        name: "stcok_info project";
        url: "https://github.com/RoyceAzure/go_stock";
        email: "roycewnag@gmail.com";
      };
    };
};
    
service StockInfoSchduler{
    rpc GetStockDayAvg (StockDayAvgRequest) returns (StockDayAvgResponse){
        option (google.api.http) = {
            get: "/v1/stock_day_avg"
            };
            option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
              description: "Use this API to get stock_day_avg";
              summary: "Get stock_day_avg";
            };
    }

    rpc GetStockPriceRealTime (StockPriceRealTimeRequest) returns (StockPriceRealTimeResponse){
      option (google.api.http) = {
          get: "/v1/stock_day_real_price/latest"
          };
          option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            description: "Use this API to get latest stock_day_real_price";
            summary: "Get latest stock_day_real_price";
          };
  }
}
